--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,10 +31,13 @@
     ],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "no-nested-ternary": "off",
+    "@typescript-eslint/ban-types": "off",
     "class-methods-use-this": "off",
     "camelcase": "off",
     "no-console": "off",
     "no-useless-constructor": "off",
+    "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": [
       "error",
       {
