--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "celebrate": "^15.0.1",
     "express": "^4.17.3",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.37"
